Closed
Bug 1659851
Opened 5 years ago
Closed 5 years ago
"Assertion failure: this->sourceUnits.atStart()" with `parse("foo", {module:true})` (JS shell only)
Categories
(Core :: JavaScript Engine, defect, P3)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
81 Branch
Tracking | Status | |
---|---|---|
firefox81 | --- | fixed |
People
(Reporter: arai, Assigned: arai)
Details
Attachments
(1 file)
testcase:
parse("foo", {module:true})
result:
Assertion failure: this->sourceUnits.atStart() (HashBangComment can only appear immediately at the start of a Script or Module), at .../mozilla-unified/js/src/frontend/TokenStream.cpp:2693
Assignee | ||
Comment 1•5 years ago
|
||
Pushed by arai_a@mac.com:
https://hg.mozilla.org/integration/autoland/rev/bec106588c17
Do not parse twice in parse shell function. r=tcampbell
Comment 3•5 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox81:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•