Bug 1659851 - Do not parse twice in parse shell function. r=tcampbell

Differential Revision: https://phabricator.services.mozilla.com/D87513